--- a/view/register.handlebars
+++ b/view/register.handlebars
@@ -1,7 +1,16 @@
-<h1>This is the login page</h1>
+<h1>This is a registration page</h1>
 <div class="container mx-auto" style="width:400px">
     <form >
-    
+      <div class="row">
+        <div class="col">
+        <label for="username">Username:</label>
+        </div>
+        </div>
+        <div class="row">
+          <div class="col">
+        <input type="text" id="username" name="username" >
+        </div>
+        </div>
         <div class="row">
           <div class="col">
         <label for="email">Email:</label>
@@ -24,10 +33,10 @@
         </div>
        <div class="row my-2">
         <div class="col">
-<button class="btn btn-primary" id="myBtn"><a href="/users" style="color: white;text-decoration:none">Login</a></button>
+<button class="btn btn-primary" id="myBtn"><a href="/users" style="color: white;text-decoration:none">Register</a></button>
         </div>
        </div>
         
-        For access to great recipes <a href="/register">Register</a>  here
+        Already a member<a href="/">Login</a>
     </form>
 </div>
