added the passport package and tried to makeitwork

--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -33,7 +33,7 @@
         </div>
        <div class="row my-2">
         <div class="col">
-<button class="btn btn-primary" id="myBtn"><a href="/users" style="color: white;text-decoration:none">Register</a></button>
+<button class="btn btn-primary" id="myBtn">Register</button>
         </div>
        </div>
         
