--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -24,7 +24,7 @@
         </div>
        <div class="row my-2">
         <div class="col">
-<button class="btn btn-primary" id="myBtn"><a href="/users" style="color: white;text-decoration:none">Login</a></button>
+<button class="btn btn-primary" id="myBtn">Login</button>
         </div>
        </div>
         
