--- a/views/addRecipe.handlebars
+++ b/views/addRecipe.handlebars
@@ -10,22 +10,22 @@
       </div>
       <div class="mb-3">
         <label for="username" class="form-label">Username:</label>
-        <input type="text" class="form-control" id="comment" name="username">
+        <input type="text" class="form-control" id="username" name="username">
+      </div>
+      <div class="mb-3">
+        <label for="username" class="form-label">Cuisine:</label>
+        <input type="text" class="form-control" id="cuisine" name="cuisine">
       </div>
       <div class="mb-3">
         <label for="recipe" class="form-label">Enter Recipe:</label>
         <textarea class="form-control" id="inputIngredients" rows="3" type="text" name="recipe"></textarea>
       </div>
       <div class="mb-3">
-        <label for="recipe" class="form-label"> cuisine:</label>
-        <textarea class="form-control" id="cuisine" rows="3" type="text" name="cuisine"></textarea>
-      </div>
-      <div class="mb-3">
         <label for="food_img" class="form-label">Enter Image URL:</label>
         <input type="text" class="form-control" id="imageURL" placeholder="Only accepts URL Image" name="food_img">
       </div>
 
-      <button class="btn btn-primary" id="myBtn">submit</button>
+      <button class="btn btn-primary submit_btn" id="myBtn">Submit</button>
     </div>
   </div>
 </form>
