--- a/views/dish.handlebars
+++ b/views/dish.handlebars
@@ -1,37 +1,31 @@
 {{!-- recipe --}}
 
-
-<div class="card mb-3 dish_card">
+<div class="card mb-3">
     <img src="{{renderRecipe.food_img}}" class="card-img-top dish_img" alt="No Image">
     <div class="card-body">
-        <h5 class="card-title">{{renderRecipe.name}}</h5>
-        <p class="card-text"><small class="text-muted">{{renderRecipe.cuisine}}</small></p>
-        <p class="card-text"><small class="text-muted">By:<a
-                    href="/users/{{renderRecipe.user_id}}">{{renderRecipe.user.username}}</a></small></p>
+        <h1 class="card-title">{{renderRecipe.name}}</h1>
+        <p class="card-text"><small class="text-muted">By: {{renderRecipe.user.username}}</small></p>
+        <p class="card-text"><small class="text-muted">Cuisine: {{renderRecipe.cuisine}}</small></p>
+
         <p class="card-text">{{renderRecipe.recipe}}</p>
-
     </div>
 </div>
 
-{{!--comments --}}
-
-
-
-<h2>Comments</h2>
-{{#each renderRecipe.comments}}
-<div class="card text-bg-light mb-3" style="max-width: 18rem;">
-    <div class="card-header">{{user.username}}</div> {{!work on this to show username who commented }}
-    <div class="card-body">
-        <p class="card-text">{{comment}}</p>
+{{!-- comments --}}
+<div class="dish_comment">
+    <h2>Comments</h2>
+    {{#each renderRecipe.comments}}
+    <div class="card text-bg-light mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{user.username}}</div>
+        <div class="card-body">
+            <p class="card-text">{{comment}}</p>
+        </div>
     </div>
+    {{/each}}
 </div>
-{{/each}}
-
-
-
 
 {{!-- add comment --}}
-
+{{!--
 <h2>Add Comment</h2>
 <form action="/comments" method="POST">
     <div class="mb-3 row">
@@ -45,14 +39,40 @@
         <div class="col-sm-10">
             <input type="text" class="form-control" id="comment" name="comment">
         </div>
-        <div class="mb-3 row">
-            <label for="recipe_comment" class="col-sm-2 col-form-label">Recipe:</label>
-            <div class="col-sm-10">
+    </div>
+    <div class="mb-3 row">
+        <label for="recipe_comment" class="col-sm-2 col-form-label">Recipe:</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="comment" name="recipeName" value="{{renderRecipe.name}}"
+                readonly>
+        </div>
+    </div>
+
+    <input class="btn btn-primary submit_btn" type="submit" value="Submit">
+    </div>
+</form> --}}
+
+<form action="/comments" method="POST">
+    <div class="card add_recipe_card">
+        <h3 class="card-header">Add Comments</h3>
+        <div class="card-body">
+            <div class="mb-3">
+                <label for="name" class="form-label">Dish Name:</label>
                 <input type="text" class="form-control" id="comment" name="recipeName" value="{{renderRecipe.name}}"
                     readonly>
             </div>
+            <div class="mb-3">
+                <label for="username" class="form-label">Username:</label>
+                <input type="text" class="form-control" id="comment" name="username">
+            </div>
+
+            <div class="mb-3">
+                <label for="recipe" class="form-label">Comment:</label>
+                <textarea class="form-control" id="comment" rows="3" type="text" name="comment"></textarea>
+            </div>
 
 
-            <input class="btn btn-primary" type="submit" value="Submit">
+            <button class="btn btn-primary submit_btn" id="myBtn">Submit</button>
         </div>
+    </div>
 </form>
