--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,42 +1,26 @@
 <h1 class="register_header">Join our wonderfull Community &#x1F37D;</h1>
 <div class="container mx-auto" style="width:800px">
-  <form action="/register" method="POST">
-    <div class="row">
-      <div class="col">
-        <label for="username">Username:</label>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <input type="text" id="username" name="username">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <label for="email">Email:</label>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <input type="email" , id="email" name="email">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <label for="password">Password:</label>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <input type="password" id="password" name="password">
-      </div>
-    </div>
-    <div class="row my-2">
-      <div class="col">
-        <button class="btn btn-primary" id="myBtn">Register</button>
-      </div>
-    </div>
 
-    Already a member<a href="/">Login</a>
+  <form action="/register" method="POST">
+    <div class="card add_recipe_card">
+      <h3 class="card-header">Add Comments</h3>
+      <div class="card-body">
+        <div class="mb-3">
+          <label for="username" class="form-label">Username:</label>
+          <input type="text" class="form-control" id="username" name="username">
+        </div>
+        <div class="mb-3">
+          <label for="username" class="form-label">Email:</label>
+          <input type="email" class="form-control" id="email" name="email">
+        </div>
+        <div class="mb-3">
+          <label for="username" class="form-label">Password:</label>
+          <input type="password" class="form-control" id="password" name="password">
+        </div>
+
+
+
+        <button class="btn btn-primary submit_btn" id="myBtn">Register</button>
+      </div>
+    </div>
   </form>
-</div>
