--- a/views/dish.handlebars
+++ b/views/dish.handlebars
@@ -16,41 +16,19 @@
     <h2>Comments</h2>
     {{#each renderRecipe.comments}}
     <div class="card text-bg-light mb-3" style="max-width: 18rem;">
-        <div class="card-header">{{user.username}}</div>
+        <div class="card-header">{{username}}</div>
         <div class="card-body">
             <p class="card-text">{{comment}}</p>
+
         </div>
+        <div class="card-footer">
+            <p class="card-text"><small class="text-muted">{{timestamp}}</small></p>
+        </div>
+
     </div>
     {{/each}}
 </div>
 
-{{!-- add comment --}}
-{{!--
-<h2>Add Comment</h2>
-<form action="/comments" method="POST">
-    <div class="mb-3 row">
-        <label for="username" class="col-sm-2 col-form-label">Username:</label>
-        <div class="col-sm-10">
-            <input type="text" class="form-control" id="comment" name="username">
-        </div>
-    </div>
-    <div class="mb-3 row">
-        <label for="comment" class="col-sm-2 col-form-label">Comment:</label>
-        <div class="col-sm-10">
-            <input type="text" class="form-control" id="comment" name="comment">
-        </div>
-    </div>
-    <div class="mb-3 row">
-        <label for="recipe_comment" class="col-sm-2 col-form-label">Recipe:</label>
-        <div class="col-sm-10">
-            <input type="text" class="form-control" id="comment" name="recipeName" value="{{renderRecipe.name}}"
-                readonly>
-        </div>
-    </div>
-
-    <input class="btn btn-primary submit_btn" type="submit" value="Submit">
-    </div>
-</form> --}}
 
 <form action="/comments" method="POST">
     <div class="card add_recipe_card">
