--- a/views/dish.handlebars
+++ b/views/dish.handlebars
@@ -16,7 +16,7 @@
     <h2>Comments</h2>
     {{#each renderRecipe.comments}}
     <div class="card text-bg-light mb-3" style="max-width: 18rem;">
-        <div class="card-header">{{username}}</div>
+        <div class="card-header">{{user_id}}</div>
         <div class="card-body">
             <p class="card-text">{{comment}}</p>
 
