--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,11 @@
 
 <body>
   <header>
+    {{#if loggedIn}}
+    {{>logout}}
+    {{else}}
     {{>header}}
+    {{/if}}
   </header>
   {{{body}}}
 
@@ -23,4 +27,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
-</html>
+  {{#if loggedIn}}
+  <script src="js/index.js"></script>
+  {{/if}}
