--- a/views/partials/logout.handlebars
+++ b/views/partials/logout.handlebars
@@ -14,6 +14,6 @@
 
 
       <button type="button" class="btn btn-primary login-btn ms-auto" id="logout">
-        logout
+        Logout
       </button>
-      </div>
+    </div>
