added feature to welcome user on sign in/register and adding name of the user making comment to the comment section, added session secret to env file

--- a/views/addRecipe.handlebars
+++ b/views/addRecipe.handlebars
@@ -10,11 +10,11 @@
       </div>
       <div class="mb-3">
         <label for="username" class="form-label">Username:</label>
-        <input type="text" class="form-control" id="username" name="username">
+        <input type="text" class="form-control" id="username" name="username" value="{{username}}">
       </div>
       <div class="mb-3">
-        <label for="username" class="form-label">Cuisine:</label>
-        <input type="text" class="form-control" id="cuisine" name="cuisine">
+        <label for="cuisine" class="form-label">Cuisine:</label>
+        <input type="text" class="form-control" id="cuisine" name="cuisine" >
       </div>
       <div class="mb-3">
         <label for="recipe" class="form-label">Enter Recipe:</label>
