--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,5 +28,5 @@
   integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
 {{#if loggedIn}}
-<script src="js/index.js"></script>
+<script src="/js/index.js"></script>
 {{/if}}
